# deep-learning-final-project

./: .dockerignore  .env.grafana  .gitignore  Dockerfile  Jenkinsfile  README.md  app.py  app_with_point_history.py  extract.py  main.py  pyproject.toml
api/constant/: config.py
api/database/: database.py
api/middleware/: auth.py  log.py
api/routers/: asl.py  auth.py
api/schema/: user.py
api/services/: asl_service.py  auth_service.py  keypoint_classifier.py
api/tests/: conftest.py  test_asl.py  test_auth.py  test_middleware.py
api/utils/: logger.py  tracer.py
docs/: 0. MODEL_NOTES.md  1. LOCAL_DEVELOPMENT.md  2. INFRASTRUCTURE_SETUP.md  3. JENKINS_SETUP.md  4. HELM_AND_KUBERNETES.md  5. LOGGING_WITH_ELK_STACK.md  6. MONITORING_PROMETHEUS.md  7. TRACING_WITH_JAEGER.md
helm-charts/: README.md
helm-charts/asl/: Chart.yaml  values.yaml
helm-charts/asl/templates/: NOTES.txt  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml  servicemonitor.yaml
helm-charts/elk/kibana/: values.yml
helm-charts/elk/logstash/: values.yml
helm-charts/jaeger/: values.yaml
helm-charts/prometheus/: values.yml
iac/: main.tf  variables.tf
model/: __init__.py
model/keypoint_classifier/: keypoint_classifier.h5  keypoint_classifier.keras  keypoint_classifier.tflite
notebooks/: 1.preprocessing.ipynb  2.data_analysis.ipynb  3.point_history_classification.ipynb  stgcn_pjta.ipynb  transformer.ipynb
processed_wlasl_top30_holistic/: dataset_index.csv
scripts/: setup-elk.sh  setup-jaeger.sh  setup-prometheus.sh
utils/: cvfpscalc.py
