[project]
name = "hand-gesture-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "mediapipe>=0.10.14",
    "mlflow>=3.1.0",
    "motor>=3.7.1",
    "notebook>=7.4.3",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-jaeger-thrift>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-requests>=0.42b0",
    "opentelemetry-instrumentation-pymongo>=0.42b0",
    "pandas>=2.3.0",
    "passlib>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psutil>=7.0.0",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
    "opentelemetry-instrumentation-asgi>=0.55b1",
    "opentelemetry-instrumentation-logging>=0.55b1",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.15.0",
    "opentelemetry-exporter-prometheus>=0.55b1",
]

[tool.coverage.run]
source = ["api"]
omit = [
    "*/tests/*",
    "*/database/database.py",
    "*/utils/logger.py", 
    "*/utils/tracer.py",
    "*/middleware/log.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
